--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3122,6 +3122,9 @@ input, select, textarea {
 					display: block;
 					margin: 0 auto;
 					max-width: 75%;
+					height: 100px;
+					width: 100px;
+					border-radius: 50%;
 				}
 
 		@media screen and (max-width: 1280px) {
